# mandelbrot

./: README.md  example.bash  mandelbrot.js  package.json
.github/workflows/: install-and-test.yml
test/: test.bash
visualize/: README.md  pyproject.toml
visualize/mandelbrot_plotter/: __init__.py  plotter.py
